--- a/src/js/components/sidebar/sidebar.css
+++ b/src/js/components/sidebar/sidebar.css
@@ -62,6 +62,8 @@ h6 {
   justify-content: space-between; /* Distribute space between children */
   padding: 2px;
   border-bottom: 1px solid #ddd;
+  /* Ensures fade when indicating a change */
+  transition: background-color 0.5s ease;
 }
 
 .edit-icon, .edit-supp {
