--- a/src/js/components/sidebar/sidebar.css
+++ b/src/js/components/sidebar/sidebar.css
@@ -62,6 +62,8 @@ h6 {
   justify-content: space-between; /* Distribute space between children */
   padding: 2px;
   border-bottom: 1px solid #ddd;
+  /* Ensures fade when indicating a change */
+  transition: background-color 0.5s ease;
 }
 
 .edit-icon, .edit-supp {
@@ -85,4 +87,43 @@ h6 {
 
 .sidebar-stat-line.fund-total .stat {
   margin-right: 05px; /* 25px lines up with lines above (with edit symbol) */
+}
+
+#summary-btn-sidebar{
+  margin-bottom: 10px;
+  text-align: center;
+  margin-left: 10%;
+  width: 80%;
+  background-color: var(--mediumGray);
+  color: black;
+  /* border: 1px black; */
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: black;
+}
+
+#summary-btn-sidebar:hover{
+  background-color: var(--darkGray);
+  color: white;
+}
+
+.arrow {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: var(--spiritgreen); /* Or any color you want */
+  left: 5px; /* Adjust for desired position */
+  margin-top: -5px;
+  transition: top 0.3s ease; /* Smooth transition */
+}
+
+/* Optional: Add arrow tip styling */
+.arrow::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -10px; /* Adjust as needed */
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent transparent var(--spiritgreen);
 }
